# firefly-framework

./: .gitignore  .gitmodules  README.md
rendering-module/: CMakeLists.txt  build.sh  build_linux.sh  build_macos.sh  leaks.sh
rendering-module/.cache/clangd/index/: _fixes.hpp.ED597A382BC04DF4.idx  _vectorize.hpp.AD16B4B3DA2015E9.idx  application.cpp.AF417333C61A61F3.idx  application.h.6E07D07BC5E06788.idx  cocoa_init.m.C3A752B53DA0C882.idx  cocoa_joystick.h.CF85C3F1B059112E.idx  cocoa_joystick.m.D820ECEEF5474AAC.idx  cocoa_monitor.m.6FB21EBB666BFEB7.idx  cocoa_platform.h.091C87227BDBC7AA.idx  cocoa_time.c.91791FE2E7CD0DFB.idx  cocoa_time.h.896A3877DF81375D.idx  cocoa_window.m.674E07F94ED0EA9C.idx  common.hpp.A41DC959A80D0031.idx  compute_common.hpp.E63DE029B17A9BD8.idx  compute_vector_relational.hpp.47832BD9E7CB513E.idx  context.c.634F2C069287F959.idx  egl_context.c.AA1D7202928F5E72.idx  exponential.hpp.B9D5E635BE066349.idx  framebuffer.cpp.7F0BF9118194B529.idx  framebuffer.h.1875BAD2645B5043.idx  func_common.inl.43AA75E9E9A6D7A9.idx  func_exponential.inl.70CFF3AC415EAF0C.idx  func_geometric.inl.4581EE21A0814B2C.idx  func_integer.inl.5D170FD6FC4B015C.idx  func_matrix.inl.801ACE36D87227B0.idx  func_packing.inl.28EDEBEE022F6166.idx  func_trigonometric.inl.D0EA3BD12833D7C8.idx  func_vector_relational.inl.01A6738A3D9A7AF7.idx  fwd.hpp.CCEC0EAD3148A6C4.idx  geometric.hpp.FD6F7FFD83B85A31.idx  geometry.cpp.436D1C8179DA9959.idx  geometry.h.DB4EF974EFC72BCF.idx  glad.c.669AA7AF17BDF606.idx  glad.h.96889300D88C0834.idx  glfw3.h.29E31C193122FFFB.idx  glm.hpp.2D826D2E7654B2CD.idx  init.c.78CED1E3BBB95FF1.idx  input.c.3ECEA135F13459F2.idx  integer.hpp.7E31CD4B44CAAFF5.idx  internal.h.904126CB2BB74E55.idx  (+145 more)
rendering-module/src/: application.cpp  application.h  framebuffer.cpp  framebuffer.h  main.cpp  renderer.cpp  renderer.h  testApp.cpp  testApp.h  window.cpp  window.h
rendering-module/src/resources/: geometry.cpp  geometry.h  quad.cpp  quad.h  shader.cpp  shader.h
resource-module/: CMakeLists.txt  build.sh
resource-module/.cache/clangd/index/: main.cpp.BE0ED63A24D25713.idx  resource.cpp.22A2BF4B585605BF.idx  resource.h.DE7274F9D9520615.idx  resourceManager.cpp.26EEF4790AB62F6C.idx  resourceManager.h.6BE96A97726F167A.idx  sound.cpp.4F2471477BAA7261.idx  sound.h.0852F1106ACE044E.idx  texture.cpp.67B2195848C40F2A.idx  texture.h.B613C1FA3FA0DDC8.idx  timer.cpp.1EF53B18E3AF21AC.idx  timer.h.6DB5A0EA379B446B.idx
resource-module/src/: main.cpp  resource.cpp  resource.h  resourceManager.cpp  resourceManager.h  sound.cpp  sound.h  texture.cpp  texture.h
signal-module/: CMakeLists.txt  build.sh  leaks.sh
signal-module/.cache/clangd/index/: dispatcher.cpp.60851EB745EB1FA9.idx  dispatcher.h.475F5E57104E1DED.idx  main.cpp.281C466B36849A6F.idx  scheduler.cpp.FF5D51CBEFF3211C.idx  scheduler.h.C41A8B24868256A1.idx
signal-module/src/: dispatcher.cpp  dispatcher.h  main.cpp  scheduler.cpp  scheduler.h
test-game/: CMakeLists.txt  build.sh  leaks.sh
test-game/.cache/clangd/index/: app.cpp.02CC5966F9D2890D.idx  app.h.A78F4C6E3D608240.idx  main.cpp.F7638009F7937E97.idx
test-game/src/: app.cpp  app.h  main.cpp
